Update TASK 1 Prediction using Supervised ML.ipynb

--- a/TASK 1 Prediction using Supervised ML.ipynb
+++ b/TASK 1 Prediction using Supervised ML.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "What is Supervised ML?\n",
     "\n",
-    "Supervised ML is when you can train your using Labelled Dataset.\n",
+    "Supervised ML is when you can train your model using Labelled Dataset.\n",
     "\n",
     "\n",
     "Now what is Labelled Dataset?\n",
