Update TASK 1 Prediction using Supervised ML.ipynb

--- a/TASK 1 Prediction using Supervised ML.ipynb
+++ b/TASK 1 Prediction using Supervised ML.ipynb
@@ -519,7 +519,7 @@
     "The next important step is to make a model for our problem statement. Here we are using train_test_split because it will help \n",
     "us in splitting out dataset into subsets.\n",
     "\n",
-    "We need our model to make unbiased prediction and this is the reason why we will splitting our dataset."
+    "We need our model to make unbiased prediction and this is the reason why we will be splitting our dataset."
    ]
   },
   {
