Update TASK 1 Prediction using Supervised ML.ipynb

--- a/TASK 1 Prediction using Supervised ML.ipynb
+++ b/TASK 1 Prediction using Supervised ML.ipynb
@@ -567,7 +567,7 @@
    "source": [
     "The output of the above code is LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)\n",
     "\n",
-    "Which means the regression.fit will fit the linear model with coefficient to minimize the residual sum of sqaure between\n",
+    "Which means the regression.fit will fit the linear model with coefficient to minimize the residual sum of square between\n",
     "actual data and predicted data.\n",
     "\n",
     "copy_X=True means, if true X will be copied else it may be overwritten.\n",
@@ -743,9 +743,9 @@
    "metadata": {},
    "source": [
     "As we can see in the above table that there is a difference between the actual score and predicted score.\n",
-    "We need to chech the accuracy of our model using metrics library.\n",
+    "We need to check the accuracy of our model using metrics library.\n",
     "\n",
-    "Since this is a regression based problem we can use 'coefficient of determination','root-mean-square error',\n",
+    "Since this is a regression based problem we can use 'coefficient of determination', 'root-mean-square error',\n",
     "'mean-absolute error' or any similar quantities.\n",
     "\n",
     "Here I am using the mean-absolute error\n"
