Update TASK 1 Prediction using Supervised ML.ipynb
Changed grammatical errors.

--- a/TASK 1 Prediction using Supervised ML.ipynb
+++ b/TASK 1 Prediction using Supervised ML.ipynb
@@ -574,9 +574,9 @@
     "\n",
     "fit_intercept=True means, it will calculate the intercept for this model.\n",
     "\n",
-    "n_jobs=None means, the number of jos to use foe computation.\n",
+    "n_jobs=None means, the number of jobs to use for computation.\n",
     "\n",
-    "normalize=False means, this parameter will be ignored when th fit_intercept is set False."
+    "normalize=False means, this parameter will be ignored when the fit_intercept is set False."
    ]
   },
   {
